# TRVA-Trajectory-Representation-Visual-Analytics

./: .gitignore  README.md  TRAJECTORY_MVP.md  main.py
backend/: pyproject.toml  数据检查.ipynb
backend/app/: main.py
backend/app/analysis/: __init__.py  cache.py  clustering.py  dimension.py  extract.py  label_fields.py  my_cdc.py  pipeline.py  schemas.py  similarity.py
backend/app/traj/: __init__.py  analysis.py  data.py  schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/public/samples/: poi_demo.geojson  traj_demo.geojson
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: BaiduMapView.tsx  EmbeddingCompareView.tsx  EmbeddingView.tsx  ErrorBoundary.tsx  MapView.tsx  PaletteDropdown.tsx  TrajectoryAnalysisPanel.tsx  TrajectoryPlaybackEngine.tsx  VizToolbar.tsx
frontend/src/constants/: trajectory.ts
frontend/src/store/: useAppStore.ts
frontend/src/utils/: colors.ts
